--- a/login.html
+++ b/login.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Login Form</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="max-width: 350px; margin: 0 auto; background-color: #fff; padding: 20px; border-radius: 5px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);">
         <form action="login.php" method="post">
-            <h2>Login</h2>
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+            <h2 style="text-align: center; margin-bottom: 20px; color: #333;">Login</h2>
+            <div class="form-group" style="margin: 10px 0;">
+                <label for="username" style="display: block; color: #333; margin-bottom: 5px;">Username:</label>
+                <input type="text" id="username" name="username" required style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+            <div class="form-group" style="margin: 10px 0;">
+                <label for="password" style="display: block; color: #333; margin-bottom: 5px;">Password:</label>
+                <input type="password" id="password" name="password" required style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
             </div>
-            <button type="submit">Login</button>
+            <button type="submit" style="width: 100%; background-color: #3498db; color: #fff; border: none; padding: 10px; border-radius: 5px; cursor: pointer;">Login</button>
         </form>
     </div>
 </body>
