--- a/signup.html
+++ b/signup.html
@@ -11,15 +11,15 @@
             <h2 style="text-align: center; margin-bottom: 20px; color: #333;">Sign Up</h2>
             <div class="form-group" style="margin: 10px 0;">
                 <label for="username" style="display: block; color: #333; margin-bottom: 5px;">Username:</label>
-                <input type="text" id="username" name="username" required style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+                <input type="text" id="username" name="username" required aria-label="Username" placeholder="Enter your username" style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
             </div>
             <div class="form-group" style="margin: 10px 0;">
                 <label for="email" style="display: block; color: #333; margin-bottom: 5px;">Email:</label>
-                <input type="email" id="email" name="email" required style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+                <input type="email" id="email" name="email" required aria-label="Email" placeholder="Enter your email" style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
             </div>
             <div class="form-group" style="margin: 10px 0;">
                 <label for="password" style="display: block; color: #333; margin-bottom: 5px;">Password:</label>
-                <input type="password" id="password" name "password" required style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+                <input type="password" id="password" name="password" required aria-label="Password" placeholder="Enter your password" style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
             </div>
             <button type="submit" style="width: 100%; background-color: #3498db; color: #fff; border: none; padding: 10px; border-radius: 5px; cursor: pointer;">Sign Up</button>
         </form>
